tests/fixtures/invalid/none_lshift_dict.py
# Cannot left shift None and Dict[str, int]
x: None = None << {"a": 1}
